Fixed issue where scrollbar would show even if the comments section had no overflow.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -884,7 +884,7 @@ main {
 .mid-comments{
     padding: 0 20px 5px 20px;
     height: 95%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .right-comment p{
